# solecito

./: .gitignore  .gitmodules  LICENSE  README.md  startup.m  todo.xlsx
connectivity/: LabelMap.m  NDmap.m  checkarraydefinition.m  mergeidx.m  plotArrayDef.m  readarraydefinition.m  samplearraydef.m  striparraydefinition.m  writearraydefinition.m
layout/: approxgroundmesh.m  blendlayout.m  checkcoordsystem.m  checkmountclearance.m  fitmoduleinmount.m  importplantlayout.m  importpolygonsfile.m  mountangles.m  mountrotations.m  plantlayout.m  plottrackerarray.m  samplesystem.m  stdmodulepoly.m
layout/resources/: exportpolygonsfile.m  writetrackerlayout.m
main/: adjust2specs.m  cleanlog.m  getGitInfo.m  printsummary.m  splitscript.m
main/GUI/: GUIarrdef.m  GUIirrtrans.m  GUIlayout.m  GUImeteo.m  GUImodels.m  GUIphysmod.m  GUIphystrck.m  GUIreduce.m  GUIsetup.m  GUIshading.m  GUIsolver.m  GUIterrain.m  restorehandles.m  setflag.m  splitGUI.m  updateflags.m
main/options/: DefaultOptions.m  completeoptions.m  getSimOption.m  readoptionsfile.m  restoreSimOptions.m  setSimOption.m  writeoptionsfile.m
models/: checkdesign.m
models/diodes/: BypassInterpolant.m  bypassdiode.m  bypassdiode2.m  bypassdiodefit.m  schottky.diode  smart.diode
models/inverter/: InverterSelection.xlsx  ONDeval.m  ONDformat.txt  ONDread.m  inverterplot.m
models/module/: IVT2irradiance.m  ModuleInterpolant.m  ODMSpec_LibreOffice.ods  ODMdefaults.mat  ODMderivatives.m  checkODM.m  fitODM_DS_Wang.m  fiveparameterODM.m  onediodeMPP.m  onediodeMPP_old.m  onediodemodel.m  onediodemodel2.m  onediodepwlapprox.m  onediodepwlapprox_old.m  scaleODM.m  translateODM.m
models/resources/: UtilizationFactor.m  applyUF.m  plotonediode.m  sandiapoints.m
models/temperature/: celltempUvalues.m  celltemp_mattei.m  getcelltempfcn.m
pvCplusplus/: pvCplusplusSimOptions.m  readme  readme.md
pvCplusplus/mexMdpwl/: ODM_base_parameters.bak  ODM_base_parameters.mat  ODM_seriesparallel.m  ODMpwlapproxBuildScript.m  SimOption.xml  addParallelBuildScript.m  addSeriesBuildScript.m  clean.sh  commonBuildScript.m  mexODM_SP_benchmark.m  mexODM_seriesparallel.m~  mexODMpwlapprox.cpp  mexODMpwlapprox.mexa64  mexVecODMpwlapproxAddseries.cpp  mexVecODMpwlapproxAddseries.mexa64  mexaddparallel.cpp  mexaddparallel.mexa64  mexaddseries.cpp  mexaddseries.mexa64  mexaddseriesparallel.m  readme  writeSimOptionXML.m
pvCplusplus/mexPV/: mexaddparallel.mexa64  mexaddseries.mexa64
pvCplusplus/pvProj/: CMakeLists.txt  distclean.sh  readme  test.h  testUtils.h
pvCplusplus/pvProj/ElectricalCalculation/: CMakeLists.txt  MonoDescPWL.cpp  MonoDescPWL.h  readme
pvCplusplus/pvProj/ElectricalCalculation/Benchmark/: CMakeLists.txt  benchOnePWLCurve.cpp  benchTwoParPWLCurves.cpp
pvCplusplus/pvProj/ElectricalCalculation/Test/: CMakeLists.txt  testAddParallel.cpp  testAddSeries.cpp  testClip.cpp  testDouglaspeucker.cpp  testFraction.cpp  testGetMPP.cpp
pvCplusplus/pvProj/ModuleDefinition/: CMakeLists.txt  OneDiodeModel.cpp  OneDiodeModel.h  readme
pvCplusplus/pvProj/ModuleDefinition/Benchmark/: CMakeLists.txt  benchODM.cpp  benchODMInv.cpp  benchODMMPP.cpp  benchPWLApprox.cpp
pvCplusplus/pvProj/ModuleDefinition/Provisional/: ODMMpp.cpp  ODMMpp.h  OneDiodeModel.cpp.backup  OneDiodeModel.h.backup  benchODM.cpp.backup  benchODMInv.cpp.backup  testBasic.cpp.backup
pvCplusplus/pvProj/ModuleDefinition/Test/: CMakeLists.txt  testBasic.cpp  testBiSection.cpp  testNewtonRaphson.cpp  testODMMPP.cpp  testPWLApprox.cpp
pvCplusplus/pvProj/Resources/: SimOption.xml
pvCplusplus/pvProj/Utils/: CMakeLists.txt  Compare.h  Eigencomp.h  LambertW.cpp  LambertW.h  Linearapprox.h  Rootfind.h  Sortbehavior.h  pvcommutils.h  readme  xmlutils.cpp  xmlutils.h
shading/: GndVV_weights.m  ShadingAnalysis.m  ShadingRegions.m  ShadingResults.m  checkIAM.m  diffuseIAM.m  diffusecomponents.m  effectiveirradiance.m  gettrackermasks.m  groundshading.m  multisensor.m  poairradiance.m  polygon.m  polygon3d.m  polyprojector.m  pvArea.m  shadeanalysisplotter.m  sunposmesh.m
simplified/: PV_simple.m  circumsolarIAM.m  circumsolarshading.m  infinite_rows.m  mismatch.m
solver/: arraysolverplotter.m  mdpwl.m  pvArraySolver.m  pwlapprox.m
solver/resources/: mdpwltest.m  profiling.m  pwlapprox_tests.m  randomdefects.m  test_interpolants.mat
terrain/: abs2prj.m  deg2utm.m  geotiffread.m  geotiffwrite.m  geotiffwrite_license.txt  getgeotiff.m  gethorizons.m  landpolygons.mat  prj2abs.m  proj.m  readterrain.m  readterrain.m.orig  utm2deg.m
tests/: readme.txt  system_designer.m  testbase.m
(+33 files in other folders)
